# mlops

./: Makefile  README.md  pyproject.toml  run.sh  test.sh
.github/workflows/: build.yaml
cmd/crawl.thienhang.com/: __init__.py  docker-compose.yaml
cmd/test.thienhang.com/: __init__.py
cmd/tool.thienhang.com/: __init__.py  pyproject.toml
cmd/tool.thienhang.com/templates/: index.html
scripts/: new-package.sh  new-service.sh
scripts/en/: install.sh
scripts/vi/: hello.sh
services/crawler/: __init__.py
services/crawler/selenium/: main.py
services/http/: pyproject.toml
services/http/apiv1/model2/: __init__.py
services/tool/: __init__.py  pyproject.toml
services/tool/templates/: index.html
services/tool/views/: __init__.py
services/tool/views/index/: __init__.py
services/tool/views/index/templates/: index.html
services/tools/: manage.py
templates/cmd/: Makefile
templates/flask_api/: __init__.py
templates/flask_api/apiv1/: __init__.py
templates/service/: pyproject.toml
