[tool.poetry]
name = "test.thienhang.com"
version = "0.1.0"
description = ""
authors = ["thienhang"]

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../services/", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"