[tool.poetry]
name = "http"
version = "0.1.0"
description = ""
authors = ["thienhang.com"]

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../glog/", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"