[tool.poetry]
name = "http"
version = "0.1.0"
description = ""
authors = ["thienhang.com"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-restx = "^1.3.0"
common = { path = "../glog/", develop = true }

[tool.poetry.dev-dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-restx = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
